# QA-bot

./: .gitignore  README.md  create_structure.py  pyproject.toml
app/llms/: factory.py
app/vectorstores/: faiss_store.py
scripts/: ingest_documents.py
src/app/core/: logger.py
src/app/embeddings/: embedding_factory.py
src/app/ingestion/: pdf_loader.py  text_splitter.py
src/app/retrieval/: retriever.py
tests/: test_retriver.py
