[project]
name = "qa-bot"
version = "0.1.0"
description = "PDF Question Answering Bot"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "langchain",
    "langchain-community",
    "langchain-ollama",
    "faiss-cpu",
    "langchain-core>=1.4.8",
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
